--- a/platform/android/MapboxGLAndroidSDKTestApp/src/main/AndroidManifest.xml
+++ b/platform/android/MapboxGLAndroidSDKTestApp/src/main/AndroidManifest.xml
@@ -536,9 +536,9 @@
                 android:value=".activity.FeatureOverviewActivity"/>
         </activity>
         <activity
-            android:name=".activity.style.CustomSpriteActivity"
-            android:description="@string/description_custom_sprite"
-            android:label="@string/activity_add_sprite">
+            android:name=".activity.style.CustomSymbolLayerActivity"
+            android:description="@string/description_custom_symbol"
+            android:label="@string/activity_add_symbol">
             <meta-data
                 android:name="@string/category"
                 android:value="@string/category_style"/>
