Include expression tests in `test-suite` command

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "install": "node-pre-gyp install --fallback-to-build=false || make node",
     "test": "tape platform/node/test/js/**/*.test.js",
     "test-memory": "node --expose-gc platform/node/test/memory.test.js",
-    "test-suite": "node platform/node/test/render.test.js && node platform/node/test/query.test.js"
+    "test-suite": "node platform/node/test/render.test.js && node platform/node/test/query.test.js && node platform/node/test/expression.test.js"
   },
   "gypfile": true,
   "binary": {
